fixed navbar arda icon and text alignment on mobile

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -64,15 +64,17 @@
   font-size: 2rem;
   display: flex;
   align-items: center;
-  height: 70px;
+  margin-top: 0;
+  /* padding-top: 0; */
+  /* height: 80px; */
   /* BUUUUUUUUUUU */
   width: 80vw;
 }
 
 .navbar-logo .arda-icon {
-  max-width: 50px;
+  width: 50px;
   height: auto;
-  width: auto;
+  /* width: auto; */
   margin-right: 20px;
 }
 
@@ -229,9 +231,10 @@
 
   .navbar-logo {
     position: absolute;
-    top: 0;
     left: 0;
-    align-items: initial;
+    align-items: center;
+    /* width: auto; */
+
     /* width: auto; */
     /* transform: translate(25%, 50%); ?? it was working before but now its not*/
   }
